# trace-share

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  NOTICE.md  README.md
.github/workflows/: ci.yml  docs-site.yml  publish-registries.yml  publish-snapshot.yml  registry-schema.yml  release.yml
crates/trace-share-cli/: Cargo.toml  README.md
crates/trace-share-cli/src/: main.rs
crates/trace-share-core/: Cargo.toml  README.md
crates/trace-share-core/src/: chunk.rs  config.rs  consent.rs  episode.rs  lib.rs  models.rs  parser.rs  pipeline.rs  publish.rs  revocation.rs  sanitize.rs  security.rs  snapshot.rs  sources.rs  split_pipeline.rs  state.rs  worker.rs
crates/trace-share-core/tests/: dedupe.rs  registry_manifest.rs  retries_state.rs  revocation_sync.rs  snapshot_builder.rs  snapshot_publish.rs  worker_presigned.rs
docs/: CONSENT.md  DATASET.md  DATA_LICENSE.md  GOVERNANCE.md  PARSERS.md  PROPOSAL.md  README.md  RELEASING.md  REVOCATION.md  SECURITY.md  SECURITY_AUDIT.md
docs-site/: astro.config.mjs  package-lock.json  package.json
docs-site/src/content/docs/: cli.md  index.md  parsers.md  proposal.md  status.md  welcome.md
docs-site/src/styles/: oss-theme.css
examples/: config.toml  policy.toml  sources.toml
registry/: sources.toml
registry/snapshots/: latest.json
scripts/: bump-version.sh  check-docs-commands.sh  extract-release-notes.js  publish-crates-ci.sh  publish-npm-ci.sh  publish-snapshot-ci.sh
