[package]
name = "trace-share-cli"
edition.workspace = true
license = "MIT OR Apache-2.0"
version.workspace = true
rust-version.workspace = true
description = "CLI for opt-in sanitized coding-agent trace export and dataset snapshot publishing."
repository = "https://github.com/frumu-ai/trace-share"
homepage = "https://github.com/frumu-ai/trace-share"
documentation = "https://github.com/frumu-ai/trace-share/tree/main/docs"
readme = "README.md"

[[bin]]
name = "trace-share"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
trace-share-core = { path = "../trace-share-core", version = "0.0.4" }
