[package]
name = "trace-share-core"
edition.workspace = true
license = "MIT OR Apache-2.0"
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
directories.workspace = true
ignore.workspace = true
glob.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
zstd.workspace = true

[dev-dependencies]
serial_test = "3"
